kqed_dev4/src/objects/WGBH_PB5_UPLOAD__c.object
<CustomObject>
    <description>This object stores PB5 data from various 3rd party gift processing vendors (e.g. Convio, Kimbia, PBSd, Auction, CARS, ACD Pledge, ACD Telemarketing, Lockbox, Aria)</description>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFT_Status__c</fullName>
        <label>EFT Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Review_Reason__c</fullName>
        <label>Flag Review Reason</label>
        <picklist>
            <picklistValues>
                <fullName>MORE THAN 1 MATCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC PLEDGE ID or PLEDGE NUMBER EXIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INS AMT equal to PAYMENT AMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIFT DATE ON PLEDGE WITH PREMIUMS &lt; 1 YEAR FROM CURRENT DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLEDGE AMOUNT &lt; SUM OF PRODUCTS MINIMUM AMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLEDGE AMOUNT &lt; PRODUCT MINIMUM AMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIFT TYPE IS NULL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giving_Record_Type__c</fullName>
        <label>Giving Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_DUPLICATE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a duplicate record that needs manual intervention.</description>
        <label>IS_DUPLICATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_ACCOUNT_ID_TA__c</fullName>
        <label>PB5_ACCOUNT_ID_TA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB5_ADDRESS_TYPE__c</fullName>
        <description>Address type: (H)ome, (W)ork, (S)easonal, (V)acation, (O)ld</description>
        <label>PB5_ADDRESS_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_ARIA__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_ARIA</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_AUCTION__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_AUCTION</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_CARS__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_CARS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_FDNDEV__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_FDNDEV</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_LOCKBOX__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_LOCKBOX</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_PBSD__c</fullName>
        <description>Vendor&apos;s ID of the account making the pledge: Maps to: UL_ACCOUNTS.ALT_ACCOUNT_ID</description>
        <label>PB5_ALT_ACCOUNT_ID_PBSD</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ALT_ACCOUNT_ID_PT__c</fullName>
        <label>PB5_ALT_ACCOUNT_ID_PT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ANONYMOUS_CODE__c</fullName>
        <label>PB5_ANONYMOUS_CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_Additional_Amount__c</fullName>
        <label>PB5_Additional_Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_BANK_ACCOUNT__c</fullName>
        <label>PB5_BANK_ACCOUNT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BANK_ID__c</fullName>
        <label>PB5_BANK_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10_ATT_1__c</fullName>
        <label>PB5_BENEFIT_10_ATT_1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10_ATT_2__c</fullName>
        <label>PB5_BENEFIT_10_ATT_2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10_ATT_3__c</fullName>
        <label>PB5_BENEFIT_10_ATT_3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10_VAL_1__c</fullName>
        <label>PB5_BENEFIT_10_VAL_1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10_VAL_2__c</fullName>
        <label>PB5_BENEFIT_10_VAL_2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10_VAL_3__c</fullName>
        <label>PB5_BENEFIT_10_VAL_3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_10__c</fullName>
        <label>PB5_BENEFIT_10</label>
        <picklist>
            <picklistValues>
                <fullName>ACDA17hRH0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACDA401Fh0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACDA40IGJ0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCDACm9Va0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCDAFcCTC0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTCH0050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTDH0154</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTDH0309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTDH0319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTDH0205</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTEH0017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTEH0090</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADD5SHIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_11__c</fullName>
        <label>PB5_BENEFIT_11</label>
        <picklist>
            <picklistValues>
                <fullName>MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGUIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMOVIE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_BENEFIT_12__c</fullName>
        <label>PB5_BENEFIT_12</label>
        <picklist>
            <picklistValues>
                <fullName>MEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGUIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMOVIE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CALLER__c</fullName>
        <description>THE ID OF THE TELEMARKETING STAFF THAT HANDLED THE PLEDGE CALL, MAPS TO: UL_BATCH_DETAIL.CALLER</description>
        <label>PB5_CALLER</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_ALIAS__c</fullName>
        <description>GUID FROM SAGE. MAPS TO: UL_BATCH_DETAIL.CHARGE_CARD_ALIAS</description>
        <label>PB5_CHARGE_CARD_ALIAS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_HOLDER_FNAME__c</fullName>
        <description>THE first name of the card holder</description>
        <label>PB5_CHARGE_CARD_HOLDER_FNAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_HOLDER_LNAME__c</fullName>
        <description>THE last name of the charge card holder</description>
        <label>PB5_CHARGE_CARD_HOLDER_LNAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_MASK__c</fullName>
        <description>THE last 4 digits of the credit card number</description>
        <label>PB5_CHARGE_CARD_MASK</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_CARD_TYPE__c</fullName>
        <label>PB5_CHARGE_CARD_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CHARGE_EXPIRE_CDATE__c</fullName>
        <description>Expiration date of card used in payment</description>
        <label>PB5_CHARGE_EXPIRE_CDATE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CITY__c</fullName>
        <description>City of preferred address. Maps to UL_ADDRESSES.CITY</description>
        <label>PB5_CITY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_CODE_10__c</fullName>
        <label>PB5_CLASSIFICATION_CODE_10</label>
        <picklist>
            <picklistValues>
                <fullName>DISCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPEAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTO_RENEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ACD AGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNICATN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXCHANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENEFIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_CODE_1__c</fullName>
        <description>MAPS TO: UL_CLASSIFICATIONS.CLASSIFICATION_CODE</description>
        <label>PB5_CLASSIFICATION_CODE_1</label>
        <picklist>
            <picklistValues>
                <fullName>DISCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPEAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTO_RENEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ACD AGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNICATN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXCHANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENEFIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_CODE_2__c</fullName>
        <label>PB5_CLASSIFICATION_CODE_2</label>
        <picklist>
            <picklistValues>
                <fullName>DISCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPEAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTO_RENEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y MEMBERTYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ACD AGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNICATN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXCHANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENEFIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_VALUE_10__c</fullName>
        <description>MAPS TO: UL_CLASSIFICATIONS.CLASSIFICATION_VALUE</description>
        <label>PB5_CLASSIFICATION_VALUE_10</label>
        <picklist>
            <picklistValues>
                <fullName>SENIOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO PHONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 TO 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 TO 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 TO 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65 OR OLDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOGDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H SOLICIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I SOLICIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_VALUE_1__c</fullName>
        <description>MAPS TO: UL_CLASSIFICATIONS.CLASSIFICATION_VALUE</description>
        <label>PB5_CLASSIFICATION_VALUE_1</label>
        <picklist>
            <picklistValues>
                <fullName>SENIOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO PHONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 TO 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 TO 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 TO 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65 OR OLDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOGDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H SOLICIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I SOLICIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_CLASSIFICATION_VALUE_2__c</fullName>
        <label>PB5_CLASSIFICATION_VALUE_2</label>
        <picklist>
            <picklistValues>
                <fullName>SENIOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO PHONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y ARONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 TO 34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 TO 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 TO 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65 OR OLDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOGDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H SOLICIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I SOLICIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_COMMENTS__c</fullName>
        <description>MPAS TO: UL_BATCH_DETAIL.COMMENTS</description>
        <label>PB5_COMMENTS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PB5_COUNTRY__c</fullName>
        <description>country of preferred address: maps to: UL_ADDRESSES.COUNTRY</description>
        <label>PB5_COUNTRY</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_ContactID__c</fullName>
        <label>PB5_ContactID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_ADDRESS_1__c</fullName>
        <description>PREFERRED EMAIL ADDRESS. MAPS TO: UL_EMAILS.EMAIL_ADDRESS</description>
        <label>PB5_EMAIL_ADDRESS_1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_ADDRESS_2__c</fullName>
        <description>The email address of the second name on the account</description>
        <label>PB5_EMAIL_ADDRESS_2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_TYPE_1__c</fullName>
        <description>PREFERRED EMAIL TYPE. MAPS TO UL_EMAILS.EMAIL_TYPE</description>
        <label>PB5_EMAIL_TYPE_1</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_EMAIL_TYPE_2__c</fullName>
        <description>The type of the second e-mail address</description>
        <label>PB5_EMAIL_TYPE_2</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE_10__c</fullName>
        <label>PB5_END_CDATE_10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE_1__c</fullName>
        <label>PB5_END_CDATE_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_END_CDATE_2__c</fullName>
        <label>PB5_END_CDATE_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_EXTRA_LINE_1__c</fullName>
        <description>from preferred address. Maps To: UL_ADDRESSES.EXTRA_LINE_1</description>
        <label>PB5_EXTRA_LINE_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_FIRST_NAME_2__c</fullName>
        <description>The first name of the second named account in the file</description>
        <label>PB5_FIRST_NAME_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_FIRST_NAME__c</fullName>
        <description>First name of household or contact or organziation. Maps to: UL_NAMES.FIRST_NAME</description>
        <label>PB5_FIRST_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_GIFT_CDATE__c</fullName>
        <description>DATE GIFT WAS MADE. DEFAULTS TO UPLOAD DATE IF BLANK. MAPS TO: UL_BATCH_DETAIL.GIFT_CDATE</description>
        <label>PB5_GIFT_CDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB5_GIFT_KIND__c</fullName>
        <description>MAPS TO: UL_BATCH_DETAIL.GIFT_KIND</description>
        <label>PB5_GIFT_KIND</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_GIFT_TYPE__c</fullName>
        <description>The gift type</description>
        <label>PB5_GIFT_TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_INSTALLMENT_AMOUNT__c</fullName>
        <description>THE AMOUNT OF THE SCHEDULED INSTALLEMENT. MAPS TO: UL_BATCH_DETAIL.INSTALLMENT_AMOUNT</description>
        <label>PB5_INSTALLMENT_AMOUNT</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PB5_IS_NEW__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this a new record for Salesforce.</description>
        <label>PB5_IS_NEW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_IS_PROCESSED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this record been processed successfully?</description>
        <label>PB5_IS_PROCESSED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB5_InteractionSourceCodeText__c</fullName>
        <label>PB5_InteractionSourceCodeText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_InteractionSourceCodeType__c</fullName>
        <label>PB5_InteractionSourceCodeType</label>
        <picklist>
            <picklistValues>
                <fullName>SourceCodeType1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB5_InteractionSourceCode__c</fullName>
        <label>PB5_InteractionSourceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_LAST_NAME_2__c</fullName>
        <description>The last name of the second person in the file</description>
        <label>PB5_LAST_NAME_2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_LAST_NAME__c</fullName>
        <description>Last name of household, contact, organizaiton. Maps to: UL_NAMES.LAST_NAME</description>
        <label>PB5_LAST_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_MIDDLE_NAME_2__c</fullName>
        <description>The middle name of the second named person in the file</description>
        <label>PB5_MIDDLE_NAME_2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_MIDDLE_NAME__c</fullName>
        <description>Middle name of household, contact, organizaiton. Maps to: UL_NAMES.MIDDLE_NAME</description>
        <label>PB5_MIDDLE_NAME</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB5_NO_PHONE_OTHER__c</fullName>
        <label>PB5_NO_PHONE_OTHER</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>